--- a/index.html
+++ b/index.html
@@ -7,76 +7,147 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="page__body">
-<header class="main-header container">
-  <section class="profile">
-    <img class="profile__image" src="img/photo.jpg" width="960" height="1280" alt="#">
-    <div class="profile__wrap">
-      <h1 class="profile__title title">Elizaveta <br> Neupokoeva</h1>
-      <h2 class="profile__subtitle title">Junior Frontend Developer</h2>
-      <p class="profile__content">Hey! I'm a junior Frontend Developer, actively developing and self-educating in the
-        field of IT.
-        I'm completing an intensive course in my profession at HTML Academy, having successfully completed three
-        training projects.
-        I want to expand my knowledge and capabilities, so I'm taking a course from RS school.</p>
-    </div>
-  </section>
-</header>
-<main class="main-index container">
-  <section class="about_me">
-    <div class="about_me__inner contacts">
-      <div class="contacts__inner">
-        <h3 class="contacts_title title">Contact information</h3>
-        <ul class="contacts__list">
+  <header class="main-header container">
+    <nav class="profile-nav">
+      <ul class="profile-nav__list">
+        <li class="profile-nav__item">
+          <a href="#">About me</a>
+        </li>
+        <li class="profile-nav__item">
+          <a href="#">About me</a>
+        </li>
+        <li class="profile-nav__item">
+          <a href="#">About me</a>
+        </li>
+        <li class="profile-nav__item">
+          <a href="#">About me</a>
+        </li>
+        <li class="profile-nav__item">
+          <a href="#">About me</a>
+        </li>
+        <li class="profile-nav__item">
+          <a href="#">About me</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main-index container">
+    <div class="main-index-left">
+      <section class="profile">
+        <figure class="profile__figure">
+          <img class="profile__image" src="img/photo.jpg" width="960" height="1280" alt="#">
+        </figure>
+
+        <h1 class="profile__title title">Elizaveta <br> Neupokoeva</h1>
+        <h2 class="profile__subtitle title">Junior Frontend Developer</h2>
+      </section>
+
+      <section class="contacts">
+        <h2 class="contacts_title title">Contact information</h2>
+        <ul class="contacts__list list">
           <li class="contacts__item">Location: Russia, Moscow</li>
-          <li class="contacts__item">Phone: +7 (900) 553-02-18</li>
-          <li class="contacts__item">Email: richardaddy333@gmail.com</li>
+          <li class="contacts__item">Email: neupokoeva.elisaveta@yandex.ru</li>
           <li class="contacts__item">GitHub:
             <a class="contacts__link" href="https://github.com/elli0thammer">elli0thammer</a></li>
         </ul>
-      </div>
-      <div class="contacts__wrap">
-        <h3 class="contacts_title title">Languages</h3>
-        <ul class="contacts__list">
-          <li class="contacts__item">Russian - Native</li>
-          <li class="contacts__item">English - A2</li>
+      </section>
+
+      <section class="languages">
+        <h2 class="languages__title title">Languages</h2>
+        <ul class="languages__list list">
+          <li class="languages__item">Russian - Native</li>
+          <li class="languages__item">English - A2</li>
         </ul>
-      </div>
+      </section>
     </div>
-    <div class="about_me__inner skills">
-      <div class="skills__inner">
-        <h3 class="skills__title title">Courses</h3>
-        <ul class="skills__list">
-          <li class="skills__item">HTML, CSS and JS on the
-            <a class="skills__link" href="https://htmlacademy.ru/profile/id2049649">HTML Academy</a>
-            (completed)
-          </li>
-          <li class="skills__item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
-        </ul>
-        <h3 class="skills__title title">Code example:</h3>
+
+    <div class="main-index-right">
+      <section class="about-me">
+        <h2 class="about-me__title title">About myself</h2>
+        <p class="about-me__content">Hey! I'm a junior Frontend Developer, actively developing and self-educating in the
+          field of IT.
+          I'm completing an intensive course in my profession at HTML Academy, having successfully completed three
+          training projects.
+          I want to expand my knowledge and capabilities, so I'm taking a course from RS school.</p>
+      </section>
+
+      <section class="skills">
+        <h2 class="skills__title title">Skills</h2>
+        <div class="skills-info">
+          <ul class="skills__list skills-info__list">
+            <li class="skills__item">HTML5, CSS3</li>
+            <li class="skills__item">JavaScript Basics</li>
+            <li class="skills__item">Git, GitHub</li>
+          </ul>
+          <ul class="skills__list skills-info__list">
+            <li class="skills__item">BEM</li>
+            <li class="skills__item">LESS/SASS</li>
+            <li class="skills__item">WebStorm</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="code-example">
+        <h2 class="skills__title title">Code example:</h2>
         <code class="skills__code">
           const stringToNumber = function (str) {<br>
           let num = Number(str)<br>
           return num;<br>
           };
         </code>
-      </div>
-      <div class="skills__wrap">
-        <h3 class="skills__title title">Skills</h3>
-        <div class="skills-info">
-        <ul class="skills__list skills-info__list">
-          <li class="skills__item">HTML5, CSS3</li>
-          <li class="skills__item">JavaScript Basics</li>
-          <li class="skills__item">Git, GitHub</li>
+      </section>
+
+      <section class="courses">
+        <h2 class="courses__title title">Courses</h2>
+        <ul class="courses__list list">
+          <li class="courses__item">HTML, CSS and JS on the
+            <a class="courses__link" href="https://htmlacademy.ru/profile/id2049649" target="_blank">
+              HTML Academy</a>
+            (completed)
+          </li>
+          <li class="courses__item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
         </ul>
-        <ul class="skills__list skills-info__list">
-          <li class="skills__item">BEM</li>
-          <li class="skills__item">LESS/SASS</li>
-          <li class="skills__item">WebStorm</li>
+      </section>
+
+      <section class="projects">
+        <h2 class="projects__title title">My projects</h2>
+        <ul class="projects__list list">
+          <li class="projects__item">
+            <a class="projects__item" href="https://elli0thammer.github.io/device/" target="_blank">
+              <img class="projects__img" src="img/device.jpg" width="1898" height="938"
+                   alt="Online technology store Device">
+              <h3 class="projects__subtitle">Online-store Device</h3>
+            </a>
+          </li>
+
+          <li class="projects__item">
+            <a class="projects__item" href="https://github.com/elli0thammer/cat-energy" target="_blank">
+              <img class="projects__img" src="img/cat-energy.jpg" width="1899" height="941"
+                   alt="Online-store cat food Cat-energy">
+              <h3 class="projects__subtitle">Online-store Cat-energy</h3>
+            </a>
+          </li>
+
+          <li class="projects__item">
+            <a class="projects__item" href="https://elli0thammer.github.io/kekstagram/" target="_blank">
+              <img class="projects__img" src="img/kekstagram.jpg" width="1900" height="940"
+                   alt="#">
+              <h3 class="projects__subtitle">Kekstagram</h3>
+            </a>
+          </li>
         </ul>
-        </div>
-      </div>
+      </section>
     </div>
-  </section>
-</main>
+  </main>
+
+  <footer class="footer">
+    <a class="footer__github-link" href="https://github.com/elli0thammer" target="_blank">
+      Visit my GitHub</a>
+    <p class="footer__year">2022-2023</p>
+    <a class="footer__rsschool-link" href="https://rs.school/js/" target="_blank">
+      <img src="img/rs-school.svg" width="86" height="32" alt="RS School">
+    </a>
+  </footer>
 </body>
 </html>
