fix: correcting validator notes;

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <h2 class="contacts_title title">Contact</h2>
         <ul class="contacts__list list">
           <li class="contacts__item">
-            <img class="contacts__icon" src="img/home.svg" width="30" height="30">Russia, Moscow</li>
+            <img class="contacts__icon" src="img/home.svg" width="30" height="30" alt="#">Russia, Moscow</li>
           <li class="contacts__item">
-            <img class="contacts__icon" src="img/litter.svg" width="30" height="30">neupokoeva.elisaveta@yandex.ru</li>
+            <img class="contacts__icon" src="img/litter.svg" width="30" height="30" alt="#">neupokoeva.elisaveta@yandex.ru</li>
           <li class="contacts__item">
             <a class="contacts__link link" href="https://github.com/elli0thammer">
-              <img class="contacts__icon" src="img/github.svg" width="30" height="30">elli0thammer</a></li>
+              <img class="contacts__icon" src="img/github.svg" width="30" height="30" alt="#">elli0thammer</a></li>
         </ul>
       </section>
 
@@ -111,7 +111,7 @@
         <h2 class="courses__title title">Courses</h2>
         <ul class="courses__list list">
           <li class="courses__item">
-            HTML, CSS and JS on the HTML Academy</a> (completed)
+            HTML, CSS and JS on the HTML Academy (completed)
           </li>
           <li class="courses__item">
             RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)
@@ -153,7 +153,7 @@
   <footer class="footer">
     <a class="footer__github-link link" href="https://github.com/elli0thammer" target="_blank">
       Visit my GitHub
-      <img class="footer__img" src="img/github-footer.svg" width="30" height="30">
+      <img class="footer__img" src="img/github-footer.svg" width="30" height="30" alt="#">
     </a>
     <p class="footer__year">2022-2023</p>
     <a class="footer__rsschool-link link" href="https://rs.school/js/" target="_blank">
